# kids-horror-stories-ru

./: .envrc_template  .gitignore  Gemfile  Makefile  Pipfile  README.md  _config.yml  compute_audio_stats.py  generate_audio.py  generate_audio_all.py  index.md  new_post.sh  podcast.xml  process_and_commit.sh  process_stories.py  prompts.md  pyproject.toml  test-gen.ipynb  test.txt
_includes/: footer.html  header.html  pagination.html  story_navigation.html
_layouts/: default.html  home.html  story.html
_stories/: 001-orchid.md  002-silkworm-curse.md  003-childhood-toy.md  004-toys-curse.md  005-cursed-picture.md  006-nightmare-skull.md  007-ghost-skull.md  008-old-doll-curse.md  009-office-chair.md  010-bathroom-mystery.md  011-come-back.md  012-elixir.md  013-jar.md  014-notification.md  015-picture.md  016-beverage.md  017-pictures-from-past.md  018-horror-mask.md  019-cursed-skulls.md  020-olds-painter-curse.md  021-baseball-cap.md  022-bloody-ritual.md  023-souls-mirror.md  024-forest-warning.md  025-monster-sign.md  026-manhole-mystery.md  027-chestnut.md  028-biosaurus.md  029-chulk-drawing.md  030-red-tree.md  031-old-park.md  032-lawn.md  033-shovel.md  034-container-66.md  035-bush.md  036-excavator.md  037-dark-arc.md  038-switch-cabinet.md  039-sign.md  040-closed-gate.md  (+1359 more)
logs/: logs-20240726233832.txt  logs-20240726235333.txt  logs-20240727001955.txt  logs-20240727191352.txt  logs-20240729035207.txt  logs-20240729215232.txt  logs-20240730151948.txt  logs-20240731035246.txt  logs-20240731082122.txt  logs-20240731201929.txt  logs-20240801012634.txt  (+20 more)
(+9 files in other folders)
