[project]
name = "kids-horror-stories-ru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.13",
    "mutagen>=1.47.0",
    "openai>=1.100.2",
    "pillow>=11.3.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
